# Convergeo

./: .env.example  .gitignore  .gitleaks.toml  .mcp.json  .prettierignore  AGENTS.md  CLAUDE.md  Makefile  README.md  eslint.config.mjs  lefthook.yml  lighthouserc.json  package.json  pnpm-lock.yaml  tsconfig.base.json
.github/: CODEOWNERS  (+2 more)
services/api/: README.md  mypy.ini  pyproject.toml
services/api/app/: __init__.py  deps.py  errors.py  logging.py  main.py  middleware.py  settings.py  supabase_client.py
services/api/app/core/: __init__.py  admin_audit.py  auth.py  env_guards.py  internal_token.py  ratelimit.py  ratelimit_policies.py  sentry.py  supabase.py
services/api/scripts/: export_openapi.py
services/api/tests/: conftest.py  test_account.py  test_admin_audit.py  test_admin_config.py  test_admin_dashboards.py  test_admin_disputes.py  test_admin_flags.py  test_admin_kyc.py  test_admin_merch.py  test_admin_orders.py  test_admin_support.py  test_admin_translations.py  test_analytics_collect.py  test_analytics_governance.py  test_analytics_unify.py  test_analytics_wiring.py  test_ask.py  test_ask_quota.py  test_auth_dep.py  test_authz_matrix.py  test_backup_workflow_artifact.py  test_beta.py  test_business_access.py  test_cart.py  test_catalog.py  test_checkout.py  test_checkout_payment.py  test_checkout_prepaid_settle_gate.py  test_cod.py  test_cod_fail_closed.py  test_commissions_invoicing.py  test_comparison.py  test_contact_strip.py  test_csv_import.py  test_customer_orders.py  test_db_adapter.py  test_demo_exclusion.py  test_directory.py  test_dispatcher.py  test_disputes.py  (+114 more)
(+1496 files in other folders)
