[project]
name = "vergeo5-api"
version = "0.1.0"
description = "Vergeo5 FastAPI backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "httpx>=0.28.0",
  "psycopg[binary,pool]>=3.2.0",
  "pydantic-settings>=2.8.0",
  "sentry-sdk>=2.20.0",
  "slowapi>=0.1.9",
  "supabase>=2.13.0",
  "uvicorn[standard]>=0.34.0",
]

[dependency-groups]
dev = [
  "httpx>=0.28.0",
  "mypy>=1.15.0",
  "pytest>=8.3.0",
  "pytest-asyncio>=0.25.0",
  "ruff>=0.11.0",
  "types-requests>=2.32.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "prepaid_settlement_db: DB-backed prepaid collection settlement tests",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["app", "scripts", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
plugins = []

[[tool.mypy.overrides]]
module = ["supabase.*", "postgrest.*", "gotrue.*", "storage3.*", "realtime.*", "slowapi.*", "limits.*"]
ignore_missing_imports = true
